# soa-rs

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
soa-rs-derive/: Cargo.toml
soa-rs-testing/: Cargo.toml
soa-rs-testing/benches/: benchmark.rs
soa-rs-testing/src/: lib.rs
src/: chunks_exact.rs  drain.rs  lib.rs  serde.rs  soa.rs
