[package]
name = "soa-rs"
version = "1.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Vec-like structure-of-arrays container. Derive SoA layout for any struct for cache-friendly, SIMD-ready data access."
homepage = "https://github.com/geronimo-iia/soa-rs"
repository = "https://github.com/geronimo-iia/soa-rs"
readme = "README.md"
categories = ["data-structures", "no-std"]
keywords = ["soa", "data-structures", "simd", "vec", "no-std"]

[package.metadata.docs.rs]
features = ["serde"]

[profile.bench]
# For profiling
debug = true

[workspace]
members = ["soa-rs-derive", "soa-rs-testing"]

[dependencies.soa-rs-derive]
version = "1.1.0"
path = "soa-rs-derive"

[dependencies.serde]
version = "1.0.199"
optional = true
default-features = false

[features]
default = []
serde = ["dep:serde"]
