[package]
name = "soa-rs-derive"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Proc macro derive for soa-rs"
homepage = "https://github.com/geronimo-iia/soa-rs"
repository = "https://github.com/geronimo-iia/soa-rs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
